  since the user has the more powerful preservelastmodified attribute to work 
  with.  Since this is not available on put operations the default value 
  adds a minute to the server timestamp in order to account for this,
  Scripts which previously used timediffmillis to do this compensation may 
  need to be rewritten.  timediffmillis has now been deprecated.


Fixed bugs:
-----------

* Memory leak from IntrospectionHelper.getHelper(Class) in embedded
  environments. Bugzilla Report 30162.

* Translate task does not remove tokens when a key is not found.
  It logs a verbose message.  Bugzilla Report 13936.

* Incorrect task name with invalid "javac" task after a "presetdef.
  Bugzilla reports 31389 and 29499.
  
* <manifest> was not printing warnings about invalid manifest elements.
  Bugzilla report 32190

* <replace> got out of memory on large files (part of report 32566). 
  <replace> can now handle files as long as there is enough disk space
  available.

* Commandline.describeCommand() methods would attempt to describe
  arguments even when none, other than the executable name, were present.

* Create signjar's helper ExecTask instance directly rather than by
  typedef discovery mechanisms. Bugzilla report 33433.

* FileUtils.resolveFile() promised to return absolute files but
  did not always do so.
  
* <ftp> failed to retrieve a file when the path towards the file contained
  an element starting with . Bugzilla report 33770
  
* "<rmic> always compiles on Java1.5" bugzilla report=33862. Fixed default
  stub version to always be "compat", even on Java1.5+. 

* The .NET compilation tasks failed if filenames given as references
  contained spaces.  Bugzilla Report 27170.

* SQL task would try access result sets of statements that didn't
  return any, causing problems with Informix IDS 9.2 and IBM DB2 8.1
  FixPak 6 (or later). Bugzilla Reports 27162 and 29954.

* Task.init() was called twice for most tasks.  Bugzilla Report 34411.
